--- a/SELI-Platform/client/stylesheet/course-creator-tool.css
+++ b/SELI-Platform/client/stylesheet/course-creator-tool.css
@@ -2,19 +2,20 @@
   width: 100%;
   height: auto;
   animation: fadeIn 1s;
+  border-top: solid 1px #e0e0e0;
 }
 
 .course-creator-units-container {
-  width: 90%;
+  width: calc(100% - var(--course-tool-menu-size));
   height: 27.5px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
-  padding: 0.25vh 5%;
-  background-color: #424242;
   color: var(--white);
   font-size: 0.9em;
   text-transform: uppercase;
+  background-color: #fafafa;
+  position: relative;
 }
 
 .course-creator-unit-container {
@@ -25,10 +26,13 @@
   cursor: pointer;
   border-radius: 2vw;
   user-select: none;
+  color: #333;
+  margin: 0 1vw;
 }
 
 .course-creator-unit-container:hover {
-  background-color: #212121;
+  background-color: var(--primary);
+  color: var(--white);
 }
 
 .course-creator-unit-lesson-item-container {
@@ -61,22 +65,22 @@
 
 .course-creator-work-area {
   width: 100%;
-  min-height: calc(
-    100vh -
-    (
-      1.3em
-      + 2vh
-      + var(--app-bar-height)
-      + 30px
-      + 4.5vh
-      + 25px
-    )
-    - calc(45px + 2.5vh)
-  );
   background-color: #e0e0e0;
   overflow-x: hidden;
   display: flex;
   position: relative;
+  height: calc(
+    100vh -
+    (
+      var(--app-bar-height) +
+      1.3em +
+      3vh +
+      4.5vh +
+      30px +
+      27.5px +
+      2.25vh
+    )
+  );
 }
 
 .course-creator-drop-area {
@@ -88,6 +92,37 @@
 .course-creator-menu-area {
   width: var(--course-tool-menu-size);
   background-color: #e0e0e0;
+  height: calc(
+    100vh -
+    (
+      var(--app-bar-height) +
+      1.3em +
+      3vh +
+      4.5vh +
+      30px +
+      1.5vh
+    )
+  );
+  position: fixed;
+  right: 0;
+  top: calc(
+    var(--app-bar-height) +
+    1.3em +
+    3vh +
+    4.5vh +
+    30px +
+    0.7vh
+  );
+}
+
+.unit-actions-button-container {
+  width: calc(var(--course-tool-menu-size));
+  display: flex;
+  height: 100%;
+  padding: 0.25vh 0;
+  justify-content: center;
+  position: absolute;
+  right: 0;
 }
 
 .new-tool-button {
@@ -153,6 +188,7 @@
   text-align: center;
   width: 100%;
   user-select: none;
+  padding-bottom: 1vh;
   transition: 0.5s;
 }
 
@@ -166,4 +202,10 @@
   background-position: calc(100% / 2) calc(((var(--course-tool-menu-size) / 3) - 1.8em) / 12);
   background-repeat: no-repeat;
   background-size: contain;
+}
+
+.check-button {
+  margin-left: 1vw !important;
+  font-size: 0.8em !important;
+  padding: 0.5vh 0.5vw !important;
 }
