--- a/SELI-Platform/client/stylesheet/stepper.css
+++ b/SELI-Platform/client/stylesheet/stepper.css
@@ -1,17 +1,36 @@
 .form-stepper {
-  padding: 1.5vh 10% !important;
-  margin-top: 1vh !important;
+  padding: 1.5vh 5% !important;
+  margin-top: 1.5vh !important;
   height: 30px !important;
+  width: 60vw;
 }
 
 .stepper-button-container {
-  width: 90% !important;
-  height: 35px;
+  width: 25vw !important;
+  margin-top: 1vh;
+  height: 30px;
   display: flex !important;
-  justify-content: flex-end !important;
-  position: fixed !important;
-  bottom: 0 !important;
-  padding: 1.25vh 5% !important;
-  background-color: #eeeeee !important;
+  justify-content: center !important;
+  position: absolute !important;
+  top: calc(var(--app-bar-height) + 1.3em + 3vh) !important;
+  right: 0;
+  padding: 1.5vh 1.5% !important;
+  border-left: solid 2px #f5f5f5;
   align-items: center;
+}
+
+.form-step {
+  width: 15vw !important;
+}
+
+.form-step--button {
+  text-transform: uppercase !important;
+  font-size: 0.75em !important;
+  letter-spacing: 2px !important;
+}
+
+.completed-step-label {
+  width: 140px !important;
+  font-size: 0.6em !important;
+  text-align: right !important;
 }
