--- a/SELI-Platform/client/stylesheet/preview.css
+++ b/SELI-Platform/client/stylesheet/preview.css
@@ -20,6 +20,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 75%;
+  animation: fadeInDown 0.5s;
 }
 
 .video-file-preview {
@@ -29,6 +30,7 @@
   background-repeat: no-repeat;
   background-size: 75%;
   margin-right: 1vw;
+  animation: fadeInDown 0.5s;
 }
 
 .audio-file-preview {
@@ -40,6 +42,47 @@
   margin-right: 1vw;
   display: flex;
   align-items: center;
+  animation: fadeInDown 0.5s;
+}
+
+.pdf-file-preview {
+  width: 100%;
+  height: 17.5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffebee;
+  animation: fadeInDown 0.5s;
+}
+
+.compressed-file-preview {
+  width: 100%;
+  height: 17.5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #d1c4e9;
+  animation: fadeInDown 0.5s;
+}
+
+.file-preview-column {
+  width: 45%;
+  height: auto;
+  margin-right: 5%;
+}
+
+.file-preview-text {
+  width: 90%;
+  padding: 0 5%;
+  height: 7.5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8em;
+  text-align: center;
+  letter-spacing: 0.75px;
+  word-break: break-all;
+  background-color: #fafafa;
 }
 
 .file-preview-actions {
