--- a/SELI-Platform/client/main.css
+++ b/SELI-Platform/client/main.css
@@ -56,7 +56,7 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #e0e0e0;
 }
 
 /* Handle */
@@ -73,4 +73,29 @@ body {
 
 th {
   font-weight: normal !important;
+}
+
+.center-button-container {
+  width: 100%;
+  padding: 1vh 0;
+  display: flex;
+  justify-content: center
+}
+
+.advice-link-container {
+  width: 95%;
+  padding: 1vh 2.5%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.advice-link {
+  margin-left: 0.25vw !important;
+  padding: 0 !important;
+  font-size: 0.85em !important;
+}
+
+.advice-link-text {
+  font-size: 0.85em;
 }
